🍻 Try to clean the structure of the project